Drawing artifacts in the Blender UI on macOS #78307

Closed
opened 2020-06-26 12:27:30 +02:00 by Francesco Siddi · 58 comments

System Information
Operating system: Darwin-19.5.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) UHD Graphics 630 Intel Inc. 4.1 INTEL-14.6.18
Intel UHD Graphics 630 1536 MB (internal) @gzag
Intel(R) Iris(TM) Plus Graphics 655 @chr.schmitz
Intel(R) HD Graphics 615 @skororu

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-25 21:53, hash: 62aa103d48

Short description of error
Drawing artifacts in the Blender UI.

Exact steps for others to reproduce the error
Launch Blender on macOS

blender_fun_macos.mov

**System Information** Operating system: Darwin-19.5.0-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) UHD Graphics 630 Intel Inc. 4.1 INTEL-14.6.18 Intel UHD Graphics 630 1536 MB (internal) @gzag Intel(R) Iris(TM) Plus Graphics 655 @chr.schmitz Intel(R) HD Graphics 615 @skororu **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-25 21:53, hash: `62aa103d48` **Short description of error** Drawing artifacts in the Blender UI. **Exact steps for others to reproduce the error** Launch Blender on macOS [blender_fun_macos.mov](https://archive.blender.org/developer/F8645339/blender_fun_macos.mov)
Author
Member

Added subscriber: @fsiddi

Added subscriber: @fsiddi

#78549 was marked as duplicate of this issue

#78549 was marked as duplicate of this issue

#78530 was marked as duplicate of this issue

#78530 was marked as duplicate of this issue

#78387 was marked as duplicate of this issue

#78387 was marked as duplicate of this issue
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Looks like the kind of glitches in #78256

Looks like the kind of glitches in #78256

Added subscriber: @chr.schmitz

Added subscriber: @chr.schmitz

Added subscriber: @2046411367

Added subscriber: @2046411367

This comment was removed by @2046411367

*This comment was removed by @2046411367*

I do not know whether this information helps, but I want to report it anyhow. The problem first appeared on my system after I updated from macOS 10.15.6 to macOS 11.0 DevBeta1.

I see, obviously, this happened coincidentally.

I do not know whether this information helps, but I want to report it anyhow. The problem first appeared on my system after I updated from macOS 10.15.6 to macOS 11.0 DevBeta1. I see, obviously, this happened coincidentally.

Added subscriber: @skororu

Added subscriber: @skororu

macOS 10.15.5 Catalina, MacBook Retina 12" 2017, 8GB, HD615
ec776f18ff, build date: 2020-06-24, 23:04:37

This was introduced a week or so ago, master daily builds were certainly working fine before that. I can see the issue OP reported on both 10.14.6 and 10.15.5.

debug_all.txt

system-info.txt

general.png

splash.png

menu.png

macOS 10.15.5 Catalina, MacBook Retina 12" 2017, 8GB, HD615 ec776f18ff70, build date: 2020-06-24, 23:04:37 This was introduced a week or so ago, master daily builds were certainly working fine before that. I can see the issue OP reported on both 10.14.6 and 10.15.5. [debug_all.txt](https://archive.blender.org/developer/F8651149/debug_all.txt) [system-info.txt](https://archive.blender.org/developer/F8651150/system-info.txt) ![general.png](https://archive.blender.org/developer/F8651151/general.png) ![splash.png](https://archive.blender.org/developer/F8651152/splash.png) ![menu.png](https://archive.blender.org/developer/F8651155/menu.png)

Added subscriber: @icoleman

Added subscriber: @icoleman

I was having the same issue when I downloaded 2.9 Alpha last night. Screen Shot 2020-06-27 at 10.40.42 PM.png

I was having the same issue when I downloaded 2.9 Alpha last night. ![Screen Shot 2020-06-27 at 10.40.42 PM.png](https://archive.blender.org/developer/F8651396/Screen_Shot_2020-06-27_at_10.40.42_PM.png)
Member

Added subscriber: @gzag

Added subscriber: @gzag
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

On the -modifier ui branch (June 28) the issue doesn't happen

#78387#968164

> On the -modifier ui branch (June 28) the issue doesn't happen #78387#968164
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

This was introduced a week or so ago, master daily builds were certainly working fine before that.

Looks like a recent change, so marking high.

> This was introduced a week or so ago, master daily builds were certainly working fine before that. Looks like a recent change, so marking high.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Can't reproduce this on Catalina 10.15.5 here. However, Blender runs on my Radeon Pro.

For those who can reproduce: Is it possible that you only have the integrated Intel GPU?
(You can use {nav Help > Save System Info} in Blender to double check which GPU Blender runs on.)

Can't reproduce this on Catalina 10.15.5 here. However, Blender runs on my Radeon Pro. For those who can reproduce: Is it possible that you only have the integrated Intel GPU? (You can use {nav Help > Save System Info} in Blender to double check which GPU Blender runs on.)

Yes, I have a MacBook Pro 13 inch with an Intel Iris Plus 655 (1635 MB RAM). Attached you will find my system-info.txt.

system-info.txt

Yes, I have a MacBook Pro 13 inch with an Intel Iris Plus 655 (1635 MB RAM). Attached you will find my system-info.txt. [system-info.txt](https://archive.blender.org/developer/F8653283/system-info.txt)

It looks like this issue was introduced in 15dda0115c78; the UI is fine with the previous commit (3cea42ce29).

+1 for the core developers for the current state of the dependency installation and source in general: I hadn't needed to compile Blender for a few years, and it was much easier this time round.

It looks like this issue was introduced in 15dda0115c78; the UI is fine with the previous commit (3cea42ce29cb). +1 for the core developers for the current state of the dependency installation and source in general: I hadn't needed to compile Blender for a few years, and it was much easier this time round.
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

It looks like this issue was introduced in {15dda0115c78}; the UI is fine with the previous commit (3cea42ce29).

CC @fclem

> It looks like this issue was introduced in {15dda0115c78}; the UI is fine with the previous commit (3cea42ce29cb). CC @fclem

Added subscribers: @okapi, @Memento

Added subscribers: @okapi, @Memento
Clément Foucault self-assigned this 2020-07-02 14:23:35 +02:00

If anyone is willing to try my hotfix, I've kicked the buildbot so the new build should be up in ~20min.

If anyone is willing to try my hotfix, I've kicked the buildbot so the new build should be up in ~20min.
Member

Added subscribers: @FrancoisRoussel-3, @mano-wii

Added subscribers: @FrancoisRoussel-3, @mano-wii

Tried with build 35, blender-2.90.0-b0da78084bd7-macOS, and the issue is still there (MacBook Air with Intel Iris Plus graphics)

Tried with build 35, blender-2.90.0-b0da78084bd7-macOS, and the issue is still there (MacBook Air with Intel Iris Plus graphics)

I compiled Blender this morning, but the bug is still present (MacBook Pro with Intel(R) Iris(TM) Plus Graphics 655).

I compiled Blender this morning, but the bug is still present (MacBook Pro with Intel(R) Iris(TM) Plus Graphics 655).

Sadly still persists for me, too. Macbook Pro, Intel Iris Plus Graphics 1536 MB.

Sadly still persists for me, too. Macbook Pro, Intel Iris Plus Graphics 1536 MB.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by 630c6226e2

This issue was referenced by 630c6226e29444113950d1073175fdf1723fbe34

The patch solved the issue in macOS 10.15.5 Catalina.

In macOS 11 Big Sur (Dev Beta 1 and 2) it is resolved in the 3D viewport, but not in all panels (see attached screenshots).

Screenshot 2020-07-07 16.05.40.jpg Screenshot 2020-07-07 16.11.23.jpg

The patch solved the issue in macOS 10.15.5 Catalina. In macOS 11 Big Sur (Dev Beta 1 and 2) it is resolved in the 3D viewport, but not in all panels (see attached screenshots). ![Screenshot 2020-07-07 16.05.40.jpg](https://archive.blender.org/developer/F8675610/Screenshot_2020-07-07_16.05.40.jpg) ![Screenshot 2020-07-07 16.11.23.jpg](https://archive.blender.org/developer/F8675613/Screenshot_2020-07-07_16.11.23.jpg)

@chr.schmitz is that Big Sur on an old mac or on the devkit? if the latter, don't worry we have the hardware.

@chr.schmitz is that Big Sur on an old mac or on the devkit? if the latter, don't worry we have the hardware.

macOS Big Sur 11.0 Beta (20A4300b) is running on a MacBook Pro (13-inch, 2018, Four Thunderbolt 3 Ports), 2,7 GHz Quad-Core Intel Core i7, 16 GB 2133 MHz LPDDR3, Intel Iris Plus Graphics 655 1536 MB.

A few days ago I tried to compile Blender with XCode 12 Beta, but this failed. Therefore I re-installed XCode 11.5.

macOS Big Sur 11.0 Beta (20A4300b) is running on a MacBook Pro (13-inch, 2018, Four Thunderbolt 3 Ports), 2,7 GHz Quad-Core Intel Core i7, 16 GB 2133 MHz LPDDR3, Intel Iris Plus Graphics 655 1536 MB. A few days ago I tried to compile Blender with XCode 12 Beta, but this failed. Therefore I re-installed XCode 11.5.

since big sur is still beta I would wait see if they fix their drivers first. If we can reproduce on the devkits we will try to fix it ourselves.

since big sur is still beta I would wait see if they fix their drivers first. If we can reproduce on the devkits we will try to fix it ourselves.

Thanks! No problem! I'll keep you informed if anything changes...

Thanks! No problem! I'll keep you informed if anything changes...

Hi. I've just downloaded the latest build, and the problem is still there with macOS Catalina.

Hi. I've just downloaded the latest build, and the problem is still there with macOS Catalina.

I can confirm what Francois writes. macOS Catalina here, too. It is not as bad as before anymore but it is definitely not fuly fixed sadly.

I can confirm what Francois writes. macOS Catalina here, too. It is not as bad as before anymore but it is definitely not fuly fixed sadly.

Changed status from 'Resolved' to: 'Needs Developer To Reproduce'

Changed status from 'Resolved' to: 'Needs Developer To Reproduce'

It really seems to be an Intel driver issue. On my Mac Pro with AMD graphics card, it works with charm.

It really seems to be an Intel driver issue. On my Mac Pro with AMD graphics card, it works with charm.

But then, why on the same machine would 2.8x work fine and not 2.9 alpha?

But then, why on the same machine would 2.8x work fine and not 2.9 alpha?
Member

It really seems to be an Intel driver issue
But then, why on the same machine would 2.8x work fine and not 2.9 alpha?

They meant that it's an Intel Driver + Blender 2.90 issue.

> It really seems to be an Intel driver issue > But then, why on the same machine would 2.8x work fine and not 2.9 alpha? They meant that it's an Intel Driver + Blender 2.90 issue.

Hi! I'm a bit worried that this has been classified as known issue. Shouldn't it stay an open bug as the 2.90 alpha GUI is still unusable?
(By unusable, I mean that GUI elements like drop-down menus, check boxes, etc are now invisible, see attached image).
Capture d’écran 2020-07-20 à 19.47.37.png

Hi! I'm a bit worried that this has been classified as known issue. Shouldn't it stay an open bug as the 2.90 alpha GUI is still unusable? (By unusable, I mean that GUI elements like drop-down menus, check boxes, etc are now invisible, see attached image). ![Capture d’écran 2020-07-20 à 19.47.37.png](https://archive.blender.org/developer/F8709336/Capture_d_e_cran_2020-07-20_a__19.47.37.png)
Member

The priority of this task is still set to high.
It's strictly speaking not a bug for us, since the issue is on the driver side. It's still important to have a workaround before the release, or changes that caused the driver bug to impact us have to be reverted.

What I did is just to organize tasks on the UI team workboard. But it's really up to the GPU team to address this one. They have their own workboard and can decide how to categorize it for themselves.

The priority of this task is still set to high. It's strictly speaking not a bug for us, since the issue is on the driver side. It's still important to have a workaround before the release, or changes that caused the driver bug to impact us have to be reverted. What I did is just to organize tasks on the UI team workboard. But it's really up to the GPU team to address this one. They have their own workboard and can decide how to categorize it for themselves.

Added subscriber: @bezma

Added subscriber: @bezma

Every morning I download 2.9 in hope it's fixed..It's been almost a month.. ugh.. seems like this will take some time.. :/ In the mean time Im trying out C4D.. and I must say Blender is so much convenient for me, used to work in Modo for years... I really like Blender UI, workflow and feel in general.. missing some viewport gizmos since Im more visual type and C4D looks interesting but Blender is my love..

Every morning I download 2.9 in hope it's fixed..It's been almost a month.. ugh.. seems like this will take some time.. :/ In the mean time Im trying out C4D.. and I must say Blender is so much convenient for me, used to work in Modo for years... I really like Blender UI, workflow and feel in general.. missing some viewport gizmos since Im more visual type and C4D looks interesting but Blender is my love..

This issue was referenced by 3886392430

This issue was referenced by 38863924305367eaae65d9447f8a306b86d6ea44
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Contributor

In #78307#983468, @bezma wrote:
Every morning I download 2.9 in hope it's fixed..It's been almost a month.. ugh.. seems like this will take some time.. :/ In the mean time Im trying out C4D.. and I must say Blender is so much convenient for me, used to work in Modo for years... I really like Blender UI, workflow and feel in general.. missing some viewport gizmos since Im more visual type and C4D looks interesting but Blender is my love..

Hi, I'm a bit confused, why don't you use the stable 2.83 instead of 2.90?

> In #78307#983468, @bezma wrote: > Every morning I download 2.9 in hope it's fixed..It's been almost a month.. ugh.. seems like this will take some time.. :/ In the mean time Im trying out C4D.. and I must say Blender is so much convenient for me, used to work in Modo for years... I really like Blender UI, workflow and feel in general.. missing some viewport gizmos since Im more visual type and C4D looks interesting but Blender is my love.. Hi, I'm a bit confused, why don't you use the stable 2.83 instead of 2.90?

The issue seems to be solved in the latest 2.90.0 beta and 2.91.0 alpha. v2.8.x was never affected.

The issue seems to be solved in the latest 2.90.0 beta and 2.91.0 alpha. v2.8.x was never affected.

Hi! Same here, it looks like the problem has been solved with today's build (2.90.0 beta - d7c4e96493 - on Mac OS 10.15.5)
Many thanks for this fix.

Hi! Same here, it looks like the problem has been solved with today's build (2.90.0 beta - d7c4e9649320 - on Mac OS 10.15.5) Many thanks for this fix.
Member

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Member
630c6226e2 3886392430

Well, I am using 2.83 since at the moment is only working Blender option for OS X. But I like 2.9 more.. ;D
Im not serius 3D user, after all I run 3D software on Mac ;) Im just maintaining knowledge and introducing my kids to 3D world..
I don't want to spend money on PC just to run 3D software.. But If it was my daily bread, I would definitely invest in PC hardware. For now OS X is my OS of choice. I really hope Blender will be fully supported on new Apple silicon since Blender is my favourite piece of software since 2.8 was introduced.

Well, I am using 2.83 since at the moment is only working Blender option for OS X. But I like 2.9 more.. ;D Im not serius 3D user, after all I run 3D software on Mac ;) Im just maintaining knowledge and introducing my kids to 3D world.. I don't want to spend money on PC just to run 3D software.. But If it was my daily bread, I would definitely invest in PC hardware. For now OS X is my OS of choice. I really hope Blender will be fully supported on new Apple silicon since Blender is my favourite piece of software since 2.8 was introduced.
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:17 +01:00

Hi! I see this issue marked as solved but it's still definitely happening on High Sierra 10.13.5, even on 2.90.0

Tested with:

  • 2.90.0
  • 2.92.0
  • 2.93.9
  • 3.0.0
  • from 3.3.0 all the way to 3.3.9.

Unfortunately, 3.4 doesn't run on High Sierra, so I'm stuck with <3.4.

Hi! I see this issue marked as solved but it's still definitely happening on High Sierra 10.13.5, even on 2.90.0 Tested with: - 2.90.0 - 2.92.0 - 2.93.9 - 3.0.0 - from 3.3.0 all the way to 3.3.9. Unfortunately, 3.4 doesn't run on High Sierra, so I'm stuck with <3.4.
Contributor

Please open a new report and reference this report. This one is three years old.

Please open a new report and reference this report. This one is three years old.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
16 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78307
No description provided.